html/v0.4/_sources/api/gammapy.irf.EffectiveAreaTable2D.txt


EffectiveAreaTable2D
================================

.. currentmodule:: gammapy.irf

.. autoclass:: EffectiveAreaTable2D
   :show-inheritance:

   
     
   

   
   

   .. rubric:: Attributes Summary

   .. autosummary::
   
      ~EffectiveAreaTable2D.high_threshold
      ~EffectiveAreaTable2D.low_threshold

   
   

   
   

   .. rubric:: Methods Summary

   .. autosummary::
   
      ~EffectiveAreaTable2D.evaluate
      ~EffectiveAreaTable2D.from_fits
      ~EffectiveAreaTable2D.info
      ~EffectiveAreaTable2D.peek
      ~EffectiveAreaTable2D.plot_energy_dependence
      ~EffectiveAreaTable2D.plot_image
      ~EffectiveAreaTable2D.plot_offset_dependence
      ~EffectiveAreaTable2D.read
      ~EffectiveAreaTable2D.to_effective_area_table

   
   

   
   

   .. rubric:: Attributes Documentation

   
   .. autoattribute:: high_threshold
   .. autoattribute:: low_threshold

   
   

   
   

   .. rubric:: Methods Documentation

   
   .. automethod:: evaluate
   .. automethod:: from_fits
   .. automethod:: info
   .. automethod:: peek
   .. automethod:: plot_energy_dependence
   .. automethod:: plot_image
   .. automethod:: plot_offset_dependence
   .. automethod:: read
   .. automethod:: to_effective_area_table

   
   